SERVER-9502 prohibit _id as RegEx

Otherwise, this breaks when replication attempts to do a query with the regular expression as _id.